# pyterrier_doc2query

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyterrier_doc2query_vaswani.ipynb  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: push.yaml  style.yml  test.yaml
examples/: doc2query--.ipynb
pyterrier_doc2query/: __init__.py  artefact.py  filtering.py  stores.py
pyterrier_doc2query/pt_docs/: index.rst
tests/: test_transform.py
